# ocudu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDBOOK.md  README.md  manage.sh  readme.md
apps/: CMakeLists.txt
apps/cu/: CMakeLists.txt  cu.cpp  cu_appconfig_yaml_writer.cpp
apps/cu_cp/: cu_cp.cpp  cu_cp_appconfig.h  cu_cp_appconfig_cli11_schema.cpp  cu_cp_appconfig_yaml_writer.cpp
apps/cu_up/: cu_up.cpp  cu_up_appconfig_yaml_writer.cpp
apps/du/: du.cpp  du_appconfig_yaml_writer.cpp
apps/du/adapters/: f1c_test_mode_adapter.cpp
apps/examples/ofh/: ru_emulator_rx_window_checker.cpp  ru_emulator_timing_notifier.cpp
apps/examples/phy/: upper_phy_ssb_example.cpp
apps/gnb/: gnb.cpp  gnb_appconfig_cli11_schema.cpp
apps/units/flexible_o_du/: flexible_o_du_application_unit.h  flexible_o_du_commands.h  o_du_unit.h
apps/units/flexible_o_du/o_du_high/: o_du_high_unit_factory.cpp
apps/units/flexible_o_du/o_du_low/: du_low_config_translator.cpp  du_low_config_translator.h  o_du_low_unit_factory.cpp  o_du_low_unit_factory_config.h
apps/units/flexible_o_du/split_helpers/: flexible_o_du_configs.h  flexible_o_du_factory.cpp  flexible_o_du_impl.cpp  flexible_o_du_impl.h
apps/units/o_cu_cp/: o_cu_cp_builder.cpp  o_cu_cp_builder.h
apps/units/o_cu_cp/cu_cp/: cu_cp_cmdline_commands.h  cu_cp_config_translators.cpp  cu_cp_unit_config.h  cu_cp_unit_config_cli11_schema.cpp  cu_cp_unit_config_validator.cpp  cu_cp_unit_config_yaml_writer.cpp
apps/units/o_cu_up/cu_up/: cu_up_unit_config.h  cu_up_unit_config_cli11_schema.cpp  cu_up_unit_config_translators.cpp
lib/fapi_adaptor/dummy/: CMakeLists.txt  fapi_dummy_config.h  fapi_dummy_factory.cpp  fapi_dummy_factory.h  fapi_dummy_n2_connection_client.cpp  fapi_dummy_n2_connection_client.h  fapi_dummy_p5_gateway.cpp  fapi_dummy_p5_gateway.h  fapi_dummy_p7_gateway.cpp  fapi_dummy_p7_gateway.h  fapi_dummy_phy_adaptor.cpp  fapi_dummy_phy_adaptor.h  fapi_dummy_sector.cpp  fapi_dummy_sector.h  fapi_dummy_timing_handler.cpp  fapi_dummy_timing_handler.h  fapi_dummy_ue_simulator.cpp  fapi_dummy_ue_simulator.h
lib/radio/sidekiq/: CMakeLists.txt  radio_config_sidekiq_validator.cpp  radio_config_sidekiq_validator.h  radio_factory_sidekiq_impl.cpp  radio_factory_sidekiq_impl.h  radio_session_sidekiq_impl.cpp  radio_session_sidekiq_impl.h  radio_sidekiq_card.cpp  radio_sidekiq_card.h  radio_sidekiq_rx_stream.cpp  radio_sidekiq_rx_stream.h  radio_sidekiq_tx_stream.cpp  radio_sidekiq_tx_stream.h  rx_alignment_buffer.h  sidekiq_helper_functions.cpp  sidekiq_helper_functions.h  tx_alignment_buffer.h
lib/ru/ofh/: CMakeLists.txt  ru_ofh_controller_impl.cpp  ru_ofh_controller_impl.h  ru_ofh_factory.cpp  ru_ofh_impl.cpp  ru_ofh_impl.h  ru_ofh_timing_notifier_impl.cpp  ru_sector_ofh_controller_impl.cpp  ru_sector_ofh_controller_impl.h  ru_sector_ofh_downlink_plane_handler_proxy.cpp  ru_sector_ofh_downlink_plane_handler_proxy.h  ru_sector_ofh_error_handler_impl.cpp  ru_sector_ofh_error_handler_impl.h  ru_sector_ofh_impl.cpp  ru_sector_ofh_impl.h  ru_sector_ofh_rx_symbol_handler_impl.cpp  ru_sector_ofh_rx_symbol_handler_impl.h  ru_sector_ofh_timing_notifier_impl.cpp  ru_sector_ofh_timing_notifier_impl.h  ru_sector_ofh_uplink_plane_handler_proxy.cpp  ru_sector_ofh_uplink_plane_handler_proxy.h
lib/ru/sdr/: CMakeLists.txt  ru_controller_sdr_impl.cpp  ru_controller_sdr_impl.h  ru_factory_sdr_impl.cpp  ru_sdr_impl.cpp  ru_sdr_impl.h  ru_sector_controller_sdr_impl.cpp  ru_sector_controller_sdr_impl.h  ru_sector_lower_phy_downlink_handler_impl.cpp  ru_sector_lower_phy_downlink_handler_impl.h  ru_sector_lower_phy_error_adapter.h  ru_sector_lower_phy_rx_symbol_adapter.h  ru_sector_lower_phy_timing_adapter.h  ru_sector_lower_phy_uplink_request_handler_impl.cpp  ru_sector_lower_phy_uplink_request_handler_impl.h  ru_sector_sdr_impl.cpp  ru_sector_sdr_impl.h
lib/security/: CMakeLists.txt
lib/xnap/: CMakeLists.txt  log_helpers.cpp  log_helpers.h  xnap_asn1_converters.h  xnap_asn1_utils.cpp  xnap_asn1_utils.h  xnap_factory.cpp  xnap_impl.cpp  xnap_impl.h  xnap_tx_pdu_notifier_with_log.h
lib/xnap/gateways/: CMakeLists.txt  xnc_network_gateway_factory.cpp
lib/xnap/procedures/: xn_handover_asn1_helpers.h  xn_setup_procedure.cpp  xn_setup_procedure.h  xn_setup_procedure_asn1_helpers.h  xnap_sn_status_transfer_procedure.cpp  xnap_sn_status_transfer_procedure.h  xnap_source_handover_preparation_procedure.cpp  xnap_target_handover_preparation_procedure.cpp  xnap_transaction_manager.h
plugins/enterprise/: .gitlab-ci.yml  CMakeLists.txt  README.md
plugins/enterprise/.gitlab/: configuration.json
plugins/enterprise/.gitlab/ci/: build.yml  schedules.yml
plugins/enterprise/cmake/modules/: FindSRSRAN.cmake
plugins/enterprise/docker/: .gitlab-ci.yml  docker-compose.yml
plugins/enterprise/docker/netconf/: README.md  default_config.xml
plugins/enterprise/docker/o1_adapter/: README.md  config_manager.py  o1_adapter.py  ofh_config_builder.py  ru_controller.py  ves.py
plugins/enterprise/lib/: CMakeLists.txt
plugins/enterprise/lib/asn1/: CMakeLists.txt
plugins/enterprise/lib/cu_cp/: CMakeLists.txt  cu_cp_impl.cpp
plugins/enterprise/lib/f1ap/: CMakeLists.txt
plugins/enterprise/lib/mac/: CMakeLists.txt
plugins/enterprise/lib/ngap/: CMakeLists.txt  ngap_impl.cpp
plugins/enterprise/lib/nrppa/: CMakeLists.txt  nrppa_asn1_converters.h  nrppa_asn1_helpers.h  nrppa_factory.cpp  nrppa_helper.cpp  nrppa_helper.h  nrppa_impl.cpp  nrppa_impl.h
plugins/enterprise/tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  Dockerfile  README.md  crash_to_hex.py  run_fuzzers.sh
tests/fuzz/ngap/: CMakeLists.txt  gen_corpus.py  ngap_cu_cp_fuzzer.cpp  ngap_pdu_decoder_fuzzer.cpp
tests/fuzz/ofh/: CMakeLists.txt  gen_corpus.py  ofh_ecpri_decoder_fuzzer.cpp  ofh_uplane_decoder_fuzzer.cpp  ofh_vlan_frame_decoder_fuzzer.cpp
tests/unittests/xnap/: CMakeLists.txt  xn_setup_procedure_test.cpp  xnap_handover_preparation_procedure_test.cpp  xnap_test_helpers.cpp  xnap_test_helpers.h  xnap_test_messages.cpp  xnap_test_messages.h
(+888 files in other folders)
